# package_ethos

./: API.md  CLAUDE.md  MANIFEST.in  README.md  setup.cfg  setup.py
ethos/: apps.py  models.py  serializers.py  tasks.py  urls.py
ethos/management/commands/: import_courses_from_ethos.py  import_sections_from_ethos.py  import_subjects_from_ethos.py  import_terms_from_ethos.py  sync_ethos_resources.py
ethos/migrations/: 0001_initial.py  0002_ethoslog.py  0003_resource_preferred_representation.py
ethos/staticfiles/ethos/js/: section_import.js
ethos/templates/ethos/: status.html
ethos/templates/ethos/logs/: detail.html  detail_partial.html  index.html
ethos/templates/ethos/resources/: detail.html  detail_partial.html  index.html
ethos/templatetags/: ethos_filters.py
ethos/views/: academic_periods.py  courses.py  logs.py  resources.py  sections.py  status.py  subjects.py
tests/: __init__.py  test_academic_periods.py  test_integration_config.py  test_subjects.py
