[metadata]
name = ethos
version = 2026.0.14
description = Ellucian Ethos SIS integration client for MyCE
author = Canusia

[options]
packages = find:
include_package_data = True
install_requires =
    Django>=3.2

[options.packages.find]
exclude =
    tests*

[options.package_data]
ethos =
    templates/**/*
    staticfiles/**/*
